--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,13 @@ footer section{
     padding-bottom: 5px;
     font-weight: 300;
 }
-.carousel{
-    height: 50%;
+.carousel-item{
+    height: 80vh;
+    vertical-align: middle;
+    transition: 3s;
+}
+.carousel-control-prev-icon, .carousel-control-next-icon{
+    background-color: rgb(0, 0, 0);
+
+
 }
