--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
   }
 body{
-    background: #FBeAEB;
+    background-color: #FBeAEB;
     margin: 0px;
     padding: 0px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -74,6 +74,13 @@ footer section{
 .carousel-caption p{
     font-size: 200%;
 }
-.sec1{
+.homesec1{
     background-color: rgb(14, 14, 70);
+}
+
+.postgallery{
+    width: 32%;
+    display: inline-block;
+    align-items: center;
+    padding: 2%;
 }
