--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,64 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     overflow-x: hidden;
 }
-.top1{
+
+nav {
+    width : 100%;
+    height: 60px;
+    background-color: #FBeAEB;
+
+
+}
+nav p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:rgb(0, 0, 0);
+    font-size: 24px;
+    line-height: 55px;
+    float: left;
+    padding: 0px 20px;
+}
+nav ul{
+    float: left;
+}
+nav ul li {
+    float: left;
+    list-style: none;
+}
+nav ul li a{
+    display: block;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    font-size: 14px;
+    padding: 22px 14px;
+    text-decoration: none;
+
+     
+}
+nav ul li ul{
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 0px 0px 4px 4px;
+}
+nav ul li ul{
+    display: block;
+    
+}
+nav ul li ul li a {
+    padding: 8px 14px;
+
+}
+nav ul li ul li {
+    width: 180px;
+    border-radius: 4px;
+
+}
+nav ul li ul li a:hover{
+    background-color: #f3f3f3;
+}
+
+/* .top1{
     background-color: blue;
     margin: 0px;
     display: flex;
@@ -23,7 +80,9 @@ body{
     padding: 10px;
     color: white;
     font: 0.9em sans-serif;
-}
+} */
+
+
 .footer{
     background-color: #2F3C7E;
 }
