--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ nav ul li {
     list-style: none;
 }
 nav ul li a{
-    display: block;
+    display: flex;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
     font-size: 14px;
@@ -142,4 +142,18 @@ footer section{
     display: inline-block;
     align-items: center;
     padding: 2%;
+}
+/* 
+dropdown css
+ */
+.dropitem{
+    display: none;
+    position: absolute;
+    background-color: #2F3C7E;
+    z-index: 9;
+}
+.headdrop1:hover .dropitem{
+    display: block;
+
+    
 }
