--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ nav li a:hover{
     border: 3px solid rgb(188, 177, 228);
     border-width: 2px;
     display: flex;
-    width: 98vw;
+    width: 95vw;
     margin: 1vw;
     
     
@@ -237,4 +237,19 @@ nav li a:hover{
     margin: auto;
     
 }
+/* 
+cse deparment professors 
+ */
+.deppostgallery{
+    width: 22vw;
+    background-color: #FBeAEB;
+    margin: 1vw;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 1vw;
+    display:inline-block;
+} 
 
+.dephomesec3{
+    margin-bottom: 1vh;
+}
