--- a/css/style.css
+++ b/css/style.css
@@ -253,3 +253,19 @@ cse deparment professors
 .dephomesec3{
     margin-bottom: 1vh;
 }
+/* 
+courses styling 
+ */
+.coursesinfo img{
+    width: 50%;
+}
+.coursescontainer h2{
+    color: rgb(0, 0, 0);
+    font-size: medium;
+    font-weight: bold;
+    font-style: italic;
+    margin: 3vw;
+}
+.coursescontainer p{
+    margin: 3vw;
+}
