--- a/css/style.css
+++ b/css/style.css
@@ -268,11 +268,47 @@ courses styling
     margin: 3vw;
 }
 .coursescontainer p{
-    margin: 3vw;
+    margin-left: 3vw;
 }
 .coursescontainer hr{
     height: 1px;
     background-color: rgb(63, 61, 216);
     border: none;
-    margin: 3vw;
+    margin-left: 3vw;
+    width: 100%;
+    float: left;
+}
+.coursesinfo details{
+    margin-left: 3vw;
+}
+.coursesinfo details table{
+    background-color: #FBeAEB;
+    table-layout: inherit;
+    
+}
+.coursesinfo details summary{
+    padding: 0.5em 1em;
+    width: 10vw;
+    border: 1px solid black;
+    border-radius: 2vw;
+    margin-bottom: 1vh;
+    background-color: #2F3C7E;
+    color: white;
+}
+
+.coursesinfo details table td, .coursesinfo details table th {
+    border: 1px solid black;
+    padding: 1px;
+    border-collapse: collapse;
+
+
+}
+
+.coursesinfo details table tr td {
+    padding: 5px;
+    padding-right: 10px;
+
+}
+.durationrow{
+    background-color:#faf1f2;
 }
