--- a/css/style.css
+++ b/css/style.css
@@ -308,3 +308,36 @@ courses styling
 .durationrow{
     background-color:#faf1f2;
 }
+/* 
+partner section*/
+#partners-section{
+    height: 344px;
+    margin-top: 90px;
+    width: 100%;
+    color: rgb(8, 8, 8);
+}
+#partners-section::before{
+    content: "";
+     position: absolute;
+     background: url('../img/bg2.jpg');
+     width: 100%;
+     height: 43%;
+     z-index: -1;
+     opacity: .9;
+}
+#partners-section div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/* #partners{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
+/* #partners img{
+    height: 70px;
+}
+.partner-item{
+    padding: 15px;
+} */
