--- a/css/style.css
+++ b/css/style.css
@@ -329,4 +329,7 @@ partner section*/
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 1vw;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
 }
