--- a/css/style.css
+++ b/css/style.css
@@ -333,3 +333,52 @@ partner section*/
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
 }
+/* about university section */
+#university-section{
+    height: 344px;
+    margin-top: 90px;
+    width: 100%;
+    color: rgb(8, 8, 8);
+}
+#university-section::before{
+    content: "";
+     position: absolute;
+     background: url('../img/bg2.jpg');
+     width: 100%;
+     height: 10%;
+     z-index: -1;
+     opacity: .9;
+}
+#university-section div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1vw;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+}
+.universitycontainer h2 {
+    color: rgb(0, 0, 0);
+    font-size: medium;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.universityinfo img{
+    width: 30vw;
+    left: 0;
+    margin: auto;
+}
+.universityinfo{
+    display: flex;
+    width: 95vw;
+    margin: 1vw;
+    
+    
+}
+.universitycontainer{
+    width: 50vw;
+    padding: 1vw;
+    margin: auto;
+    
+}
